--- a/jenkinsFile
+++ b/jenkinsFile
@@ -13,5 +13,9 @@ pipeline {
                 }
             }
         }
+        stage ("Complete){
+            steps{
+                echo "Completed."
+        }
     }
 }
